# AE-PACT

./: .gitignore  README  SM_correlation.py  bar.py  compare-ansor-cnnopt-2080.sh  compare-ansor-cnnopt-v100.sh  gen_fig.py  get_duration_ansor_our.py  get_duration_cudnn.py  regress.py  sm-cor-2080.sh  sm-cor-v100.sh
Ansor/ansor_profile-2080Ti/: adefo2.csv
CNNOpt/2080Ti/: CSGSorted.timesForProblemresnet-3  CSGSorted.timesForProblemyolo-3  CSGSorted.timesForProblemyolo-5  CSGSorted.timesForProblemyolo-7  CSGresnet-11  CSGresnet-3  CSGresnet-5  CSGresnet-8  CSGyolo-3  CSGyolo-5  CSGyolo-7  CSGyolo-9  profile-RS-resnet.sh  profile-RS-yolo.sh  profile-S.sh
CNNOpt/v100/: CSGSorted.timesForProblemresnet-3  CSGSorted.timesForProblemyolo-3  CSGSorted.timesForProblemyolo-5  CSGSorted.timesForProblemyolo-7  CSGresnet-11  CSGresnet-3  CSGresnet-5  CSGresnet-8  CSGyolo-3  CSGyolo-5  CSGyolo-7  CSGyolo-9  p-rs-defo.sh  p-rs-res.sh  p-rs-yolo.sh  p-s.sh
Kernel/RSkernel/rsr-defo/: CMakeLists.txt  CSG32x108x108_3_3.cu  calcAndExecuteCSG.py  runDefo.sh  time_record_best_config.txt
Kernel/RSkernel/rsr-yolotest/: CMakeLists.txt  calcAndExecuteCSG.py  runYolo.sh  template_rsr.code  time_record_best_config.txt
Kernel/SKernel/: CMakeLists.txt  collect_config.py  get_best.py  template.code  time_record_best_config.txt  tune.py  tune_defo.sh  tune_res.sh  tune_yolo.sh
Kernel/dump_best/RSKernel/rsr-defo/: CMakeLists.txt  Reg.timesForProblem32x108x108_3_3.csv  convert_to_csv.py  get_best.py  main_withcheck.cpp  time_record_best_config.txt  timesForProblem32x108x108_3_3.txt
Kernel/dump_best/RSKernel/rsr-restest/: CMakeLists.txt  get_best.py
Kernel/dump_best/RSKernel/stride2-3x3test/: CMakeLists.txt  convert_to_csv.py  get_best.py  time_record_best_config.txt  wrapper.code
lop-2080/: create_hfhf.py
lop-2080/dir_rs1odd_dataset/: Reg.timesForProblem512x17x17_1024_1.csv
lop-2080/dir_rs3_half_dataset/: Reg.timesForProblem128x136x136_64_3.csv  Reg.timesForProblem128x28x28_128_3.csv  Reg.timesForProblem256x14x14_256_3.csv  Reg.timesForProblem256x68x68_128_3.csv  Reg.timesForProblem32x108x108_32_3.csv  Reg.timesForProblem32x108x108_3_3.csv  Reg.timesForProblem32x544x544_3_3.csv  Reg.timesForProblem512x34x34_256_3.csv  Reg.timesForProblem64x272x272_32_3.csv  Reg.timesForProblem64x54x54_32_3.csv  Reg.timesForProblem64x54x54_64_3.csv  Reg.timesForProblem64x56x56_64_3.csv
lop-2080/dir_rs3odd_dataset/: Reg.timesForProblem1024x17x17_512_3.csv  Reg.timesForProblem128x27x27_128_3.csv  Reg.timesForProblem128x27x27_64_3.csv  Reg.timesForProblem512x7x7_512_3.csv
lop-2080/dir_s3_half_dataset/: Reg.timesForProblem128x136x136_64_3.csv  Reg.timesForProblem128x28x28_128_3.csv  Reg.timesForProblem256x14x14_256_3.csv  Reg.timesForProblem256x68x68_128_3.csv  Reg.timesForProblem32x108x108_32_3.csv  Reg.timesForProblem32x108x108_3_3.csv  Reg.timesForProblem32x544x544_3_3.csv  Reg.timesForProblem512x34x34_256_3.csv  Reg.timesForProblem64x272x272_32_3.csv  Reg.timesForProblem64x54x54_32_3.csv  Reg.timesForProblem64x54x54_64_3.csv  Reg.timesForProblem64x56x56_64_3.csv
lop-2080/dir_st2_dataset/: Reg.timesForProblem128x28x28_64_3.csv  Reg.timesForProblem256x14x14_128_3.csv  Reg.timesForProblem512x7x7_256_3.csv  Reg.timesForProblem64x112x112_3_7.csv
lop-v100/: create_hfhf.py
lop-v100/dir_rs3_half_dataset/: Reg.timesForProblem128x136x136_64_3.csv  Reg.timesForProblem128x28x28_128_3.csv  Reg.timesForProblem256x14x14_256_3.csv  Reg.timesForProblem256x68x68_128_3.csv  Reg.timesForProblem32x108x108_32_3.csv  Reg.timesForProblem32x108x108_3_3.csv  Reg.timesForProblem32x544x544_3_3.csv  Reg.timesForProblem512x34x34_256_3.csv  Reg.timesForProblem64x272x272_32_3.csv  Reg.timesForProblem64x54x54_32_3.csv  Reg.timesForProblem64x54x54_64_3.csv  Reg.timesForProblem64x56x56_64_3.csv
lop-v100/dir_rs3odd_dataset/: Reg.timesForProblem1024x17x17_512_3.csv  Reg.timesForProblem128x27x27_128_3.csv  Reg.timesForProblem128x27x27_64_3.csv  Reg.timesForProblem512x7x7_512_3.csv
lop-v100/dir_s3_half_dataset/: Reg.timesForProblem128x136x136_64_3.csv  Reg.timesForProblem128x28x28_128_3.csv  Reg.timesForProblem256x14x14_256_3.csv  Reg.timesForProblem256x68x68_128_3.csv  Reg.timesForProblem32x108x108_32_3.csv  Reg.timesForProblem32x108x108_3_3.csv  Reg.timesForProblem32x544x544_3_3.csv  Reg.timesForProblem512x34x34_256_3.csv  Reg.timesForProblem64x272x272_32_3.csv  Reg.timesForProblem64x54x54_32_3.csv  Reg.timesForProblem64x54x54_64_3.csv  Reg.timesForProblem64x56x56_64_3.csv
lop-v100/dir_st2_dataset/: Reg.timesForProblem128x28x28_64_3.csv  Reg.timesForProblem256x14x14_128_3.csv  Reg.timesForProblem512x7x7_256_3.csv  Reg.timesForProblem64x112x112_3_7.csv
new-halfhalf-2080/: create_hfhf.py  dmrankorder_for_RSkernel.py  dmrankorder_for_RSkernel_stride2.py  dmrankorder_for_Skernel_3.py  dmrankorder_for_gemmkernel.py  res_table_for_RSkernel.py  run.sh
new-halfhalf-2080/dir_gemm_dataset/: Reg.timesForProblem128x68x68_256_1.csv  Reg.timesForProblem256x34x34_512_1.csv  Reg.timesForProblem64x136x136_128_1.csv  Reg.timesForProblem64x56x56_64_1.csv  test_set_gemmkernel.csv  train_set_gemmkernel.csv
new-halfhalf-2080/dir_rs1_dataset/: Reg.timesForProblem128x68x68_256_1.csv  Reg.timesForProblem256x34x34_512_1.csv  Reg.timesForProblem64x136x136_128_1.csv  Reg.timesForProblem64x56x56_64_1.csv
new-halfhalf-v100/: create_hfhf.py  dmrankorder_for_RSkernel_stride2.py  dmrankorder_for_gemmkernel.py  res_table_for_RSkernel.py  res_table_for_RSkernel_stride2.py  res_table_for_Skernel_3.py  res_table_for_gemmkernel.py  run.sh
(+123 files in other folders)
